fix: Add flex-wrap to post footer

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -531,6 +531,7 @@ article.post {
     .footer__metadata>div {
       @include flex(flex-start, center);
       gap: $spacingSmall;
+      flex-wrap: wrap;
 
       svg {
         width: 1.25rem;
